add alternative Materials design color

--- a/Shared/Resources/qtquickcontrols2.conf
+++ b/Shared/Resources/qtquickcontrols2.conf
@@ -3,6 +3,8 @@ Style=Material
 
 [Material]
 Primary=#303030
+# Blue primary color
+#Primary=#000099
 Accent=#68C1F9
 Foreground=#E6E7E8
 Background=#424242
